--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 /gradle.properties
 /.vscode/
 
+.idea/
 .gradle/
+.vs/
 
 /plugin/Assembly-CSharp-Editor.csproj
 /plugin/Assets/PlayServicesResolver/Editor/JarResolverLib.dll
